force-app/main/default/objects/tdc_cti__IVR_Request__c/fields/tdc_cti__Active__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Active__c</fullName>
    <formula>IF(ISPICKVAL(tdc_cti__IVR_Number__r.tdc_cti__Active__c,&apos;Yes&apos;),&apos;Yes&apos;,&apos;No&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Text</type>
</CustomField>