force-app/main/default/objects/tdc_cti__IVR_Request__c/fields/tdc_cti__Digit__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Digit__c</fullName>
    <label>Digit</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>