force-app/main/default/objects/tdc_cti__IVR_Request__c/fields/tdc_cti__IVR_Number__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__IVR_Number__c</fullName>
    <label>IVR Number</label>
    <referenceTo>tdc_cti__IVR_Number__c</referenceTo>
    <relationshipLabel>IVR Requests</relationshipLabel>
    <relationshipName>IVR_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>