force-app/main/default/objects/tdc_cti__IVR_Request__c/fields/tdc_cti__Queue_Name__c.field-meta.xml
<CustomField>
    <fullName>tdc_cti__Queue_Name__c</fullName>
    <label>Queue Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>